[project]
name = "py-agent-local-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "poethepoet>=0.48.0",
]

[tool.poe.tasks]
agent = "uv run main.py"